# dotfiles

./: .chezmoi.toml  .chezmoidata.toml  .chezmoidata.toml.tmpl  .chezmoidata.yaml  .chezmoiignore  .editorconfig  .gitignore  .install.sh  .pre-commit-config.yaml  .stowrc  AGENTS.md  Brewfile  README.md  WARP.md  aliases.sh  configuration.nix  default.nix  dotfiles_readme.md  dotfiles_readme_collapsible.md  flake.nix  hardware-configuration.nix  home.nix  justfile  setup.sh  setup_mac.sh
.chezmoitemplates/: logging.sh
.zed/: settings.json
VSCodium/: Network Persistent State  TransportSecurity  machineid
VSCodium_temp/: settings.json
_devtools/python/data_template/template_files/: .gitignore  README.md  jupytext.toml  justfile  pyproject.toml  ruff.toml
_devtools/python/data_template/template_files/dir_structures/: ad_hoc.md  data_analysis.md  data_science.md
_devtools/python/test/: .env  .gitignore  README.md  jupytext.toml  justfile  pyproject.toml  ruff.toml
_devtools/python/test/data/00_external/: .gitkeep
_devtools/python/test/data/01_raw/: .gitkeep
_devtools/python/test/data/02_interim/: .gitkeep
_devtools/python/test/data/03_processed/: .gitkeep
_devtools/python/test/models/: .gitkeep
_devtools/python/test/notebooks/: .gitkeep
_devtools/python/test/references/: .gitkeep
_devtools/python/test/reports/: .gitkeep
_devtools/python/test/src/: __init__.py  config.py  dataset.py  features.py  plots.py
_devtools/python/test/src/modeling/: __init__.py  predict.py  train.py
_notes/: gnu_stow.md  install.md  just_homebrew.md  lib_vs_script_dir_difference.md  shell_commands.md  ssh_key.md  ssh_key_generation.md  vscode_ssh_passphrase_error.md
aerospace/: aerospace.toml
alacritty/: alacritty.toml
anki/: addon_list_and_configs.md  prefs21.db
atuin/: config.toml
bash/: .bash_profile  .bashrc
borders/: bordersrc
brew/: Brewfile  Brewfile_mac
chezmoi/: chezmoi.toml
cli/: .bashrc  .zshrc  README.md  _README.md  alacritty.toml  aliases.sh  starship.toml
colorscheme/: catppuccin_macchiato.sh
cspell/: cspell.json
direnv/: direnvrc
dot_config/: dot_Brewfile  dot_editorconfig
espanso/: math.yml  math_set_theory.yml  superscript_subscript.yml
file-manager/: pcmanfm.conf
firefox/: noscript_data.txt  sidebery_data.json
formatters/: .markdownlint.jsonc
ghostty/: config
git/: .gitattributes  .gitconfig  .gitignore_global  config
helix/: config.toml  external-snippets.toml  languages.toml
home/: .chezmoi.toml.tmpl  .chezmoidata.toml.tmpl  .chezmoiignore  dot_Brewfile  dot_bash_profile  dot_bash_profile.tmpl  dot_bashrc  dot_zprofile  dot_zprofile.tmpl  dot_zshrc
karabiner/: karabiner.json
lazygit/: config.yml  default_config.yml
nixos/: flake.nix  (+3 more)
(+1233 files in other folders)
