# -----------------------------------------------------------------------------
# File: test/pyproject.toml
# Description: Project metadata and dependencies (PEP 621 format)
# -----------------------------------------------------------------------------

[project]
# Project name — used for display and installation
name = "test"

# One-line description of the project
description = "test"

# Author(s) — list format is required by PEP 621
authors = ["test <your@email.com>"]

# Supported Python version — enforced by uv, Ruff, etc.
requires-python = ">=>=3.10"

# Runtime dependencies — these will be installed via `uv pip install`
dependencies = [
    "ruff",             # Optional: install Ruff via pip if not globally installed
    "jupytext",         # Notebook pairing/scripting
    "pandas",           # Data analysis
    "numpy",            # Numerical computing
    "matplotlib",       # Visualization
    "scikit-learn",\n    "xgboost",
]

# Optional: Configuration for build backends
# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"

# Optional: tool-specific dependencies from GitHub or local paths
# [tool.dependencies]
# github = ["user/repo@branch"]
# local = ["../path/to/local_package"]
