# -----------------------------------------------------------------------------
# File: ${PROJECT_PATH}/pyproject.toml
# Description: Project metadata and dependencies (PEP 621 format)
# -----------------------------------------------------------------------------

[project]
# Project name — used for display and installation
name = "${PROJECT_NAME}"

# One-line description of the project
description = "${DESCRIPTION}"

# Author(s) — list format is required by PEP 621
authors = ["${AUTHOR_NAME} <your@email.com>"]

# Supported Python version — enforced by uv, Ruff, etc.
requires-python = ">=${PYTHON_VERSION}"

# Runtime dependencies — these will be installed via `uv pip install`
dependencies = [
    "ruff",             # Optional: install Ruff via pip if not globally installed
    "jupytext",         # Notebook pairing/scripting
    "pandas",           # Data analysis
    "numpy",            # Numerical computing
    "matplotlib",       # Visualization
${DS_DEPENDENCIES}
]

# Optional: Configuration for build backends
# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"

# Optional: tool-specific dependencies from GitHub or local paths
# [tool.dependencies]
# github = ["user/repo@branch"]
# local = ["../path/to/local_package"]
